<?xml version="1.0"?>
<package format="2">
    <name>ros_rvv</name>
    <version>0.0.1</version>
    <description>The ROS Robot View Vizualization package</description>

    <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_srvs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>


</package>
