<?xml version="1.0"?>
<package format="2">
    <name>ros_rvv</name>
    <version>0.1.0</version>
    <description>The ROS Robot View Vizualization package</description>

    <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>


    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>tf2_ros</depend>
    <depend>std_srvs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_geometry_msgs</depend>


</package>
